// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should display children 1`] = `
<MainTitle
  className="Title TitleColor_default"
  ellipsis={true}
  tag="h1"
>
  content
</MainTitle>
`;

exports[`Title should extend className 1`] = `
<MainTitle
  className="Title TitleColor_default noPaddingBottom"
  ellipsis={true}
  tag="h1"
>
  content
</MainTitle>
`;

exports[`Title should set color default 1`] = `
<MainTitle
  className="Title TitleColor_default"
  ellipsis={true}
  tag="h1"
>
  content
</MainTitle>
`;

exports[`Title should set color primary 1`] = `
<MainTitle
  className="Title TitleColor_primary"
  ellipsis={true}
  tag="h1"
>
  content
</MainTitle>
`;
